--- a/app/src/main/res/layout-v21/activity_app.xml
+++ b/app/src/main/res/layout-v21/activity_app.xml
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/loadingScreen"
-        android:background="#fff">
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:layout_width="match_parent"
