--- a/app/src/main/res/layout/activity_churchdetail.xml
+++ b/app/src/main/res/layout/activity_churchdetail.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/gray_bg"
     android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_detail"
@@ -21,25 +20,27 @@
             app:expandedTitleGravity="center_horizontal|bottom"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <android.support.v7.widget.Toolbar
-                android:background="@color/colorPrimary"
-                android:layout_gravity="top"
-                android:title="wedechurch"
-                android:layout_height="50dp"
-                android:layout_width="match_parent"
-                android:id="@+id/detailtoolbar"/>
+            <!--<android.support.v7.widget.Toolbar-->
+                <!--android:background="@color/colorPrimary"-->
+                <!--android:layout_gravity="top"-->
+                <!--android:title="wedechurch"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:id="@+id/churchtoolbar"/>-->
+
             <ImageView
-                android:id="@+id/headerimage"
+                android:id="@+id/churchheaderimage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
+                android:scaleType="fitXY"
                 android:src="@drawable/wedechurch_icon"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/churchtoolbar"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
                 android:layout_width="match_parent"
@@ -114,6 +115,7 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
+        android:background="@color/gray_bg"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:clipToPadding="false" >
